<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/spacing_mlarge"-->
<!--                android:layout_marginTop="@dimen/spacing_middle"-->
<!--                android:layout_marginEnd="@dimen/spacing_mlarge"-->
<!--                android:layout_marginBottom="@dimen/spacing_middle"-->
<!--                android:text="App"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"-->
<!--                android:textColor="@color/grey_90"-->
<!--                app:fontFamily="sans-serif-medium" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xxlarge"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                >


                <ImageView
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:src="@drawable/logo"
                    app:tint="@color/amber_600"
                    android:contentDescription="TODO" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="15dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_80" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xxlarge"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium">


                <ImageButton
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"

                    android:contentDescription="TODO"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_info" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Version"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:text="@string/authortext"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xxlarge"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:clickable="true"
                android:focusable="true"

                >


                <ImageButton
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_person" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="@dimen/spacing_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authorwebsite"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:layout_marginLeft="@dimen/spacing_mlarge"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:layout_marginRight="@dimen/spacing_mlarge"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:text="Company"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"

                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xxlarge"
                android:orientation="horizontal"
                android:paddingStart="@dimen/spacing_medium"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium">


                <ImageButton
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@android:color/transparent"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_info" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dream Space Inc."
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Android App Specialist"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"

                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xxlarge"
                android:orientation="horizontal"

                android:paddingStart="@dimen/spacing_medium"
                android:paddingEnd="@dimen/spacing_medium">


                <ImageButton
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@android:color/transparent"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_info"
                    android:contentDescription="TODO" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3265  Hinkle Deegan Lake Road, Dundee New York, United State"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>

